# midiinfo

./: .gitignore  README.md  pyproject.toml
midiinfo/: cli.py
