[tool.poetry]
name = "midiinfo"
version = "0.2.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
python-rtmidi = "^1.5.8"
fire = "^0.5.0"
pygame = "^2.5.2"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
midiinfo = "midiinfo:main_cli"